force-app/main/default/objects/SFDC_Enrollment__c/fields/Class_Status__c.field-meta.xml
<CustomField>
    <fullName>Class_Status__c</fullName>
    <formula>TEXT( Class__r.Class_Status__c )</formula>
    <label>Class Status</label>
    <type>Text</type>
</CustomField>