force-app/main/default/objects/SFDC_Enrollment__c/fields/Competency_Check_created__c.field-meta.xml
<CustomField>
    <fullName>Competency_Check_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competency Check created?</label>
    <type>Checkbox</type>
</CustomField>