force-app/main/default/objects/SFDC_Enrollment__c/fields/Consumer_Name__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumer Name</label>
    <referenceTo>Consumer__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>