force-app/main/default/objects/SFDC_Enrollment__c/fields/SMS_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Opt out</label>
    <type>Checkbox</type>
</CustomField>